# afb-libnodejs

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: node-afb.c.DA2E411ADA339FDF.idx  node-afb.h.5698BED46D64CFAE.idx  node-callbacks.c.7DF0CB9283CFC9AE.idx  node-callbacks.h.D712F36671AFBB60.idx  node-utils.c.702B2A6E0E159E22.idx  node-utils.h.5C75006C8986B2E9.idx
conf.d/: CMakeLists.txt
conf.d/cmake/: 00-debian-config.cmake  00-fedora-config.cmake  00-opensuse-config.cmake  01-ubuntu-config.cmake  config.cmake
conf.d/project/etc/: CMakeLists.txt  oidc-local.json  oidc-oauth2.json
conf.d/project/htdocs/: index.html
samples/: README.md  event-api.js  loa-api.js  simple-api.js  subcall-api.js  test-api.js
src/: CMakeLists.txt  NODE-test.c  NODE-test.cpp  glue-common.h  node-afb.c  node-afb.h  node-callbacks.c  node-callbacks.h  node-utils.c  node-utils.h
